5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1585_1015.log
== TEST (2019-03-23 17:10:32) 
-- CODE:
numeros=int(input("Escreva tres numeros: "))
minimo= min(numeros)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    minimo= min(numeros)
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:10:46) 
-- CODE:
numeros=int(input("Escreva tres numeros: "))
minimo= min(numeros)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    minimo= min(numeros)
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:11:26) 
-- CODE:
numero1=int(input("Escreva um numeros: "))
numero2=int(input("Escreva um numeros: "))
numero3=int(input("Escreva um numeros: "))
minimo= min(numeros)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    minimo= min(numeros)
NameError: name 'numeros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:11:49) 
-- CODE:
numero1=int(input("Escreva um numeros: "))
numero2=int(input("Escreva um numeros: "))
numero3=int(input("Escreva um numeros: "))
minimo= min(numero1,numero2,numero3)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    minimo= min(numeros)
NameError: name 'numeros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:12:05) 
-- CODE:
numero1=int(input("Escreva um numeros: "))
numero2=int(input("Escreva um numeros: "))
numero3=int(input("Escreva um numeros: "))
minimo= min(numero1,numero2,numero3)
print(minimo)

-- OUTPUT:
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:14:03) 
-- CODE:
numero1=int(input("Escreva um numeros: "))
numero2=int(input("Escreva um numeros: "))
numero3=int(input("Escreva um numeros: "))
minimo= min(numero1,numero2,numero3)
maximo= max(numero1,numero2,numero3)
intermediario= (numero1+numero2+numero3-maximo-minimo)
print(intermediario)

-- OUTPUT:
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:14:21) 
-- CODE:
numero1=int(input("Escreva um numeros: "))
numero2=int(input("Escreva um numeros: "))
numero3=int(input("Escreva um numeros: "))
minimo= min(numero1,numero2,numero3)
maximo= max(numero1,numero2,numero3)
intermediario= (numero1+numero2+numero3-maximo-minimo)
print(intermediario)

-- OUTPUT:
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:14:53) 
-- CODE:
numero1=int(input("Escreva um numeros: "))
numero2=int(input("Escreva um numeros: "))
numero3=int(input("Escreva um numeros: "))
minimo= min(numero1,numero2,numero3)
maximo= max(numero1,numero2,numero3)
intermediario= (numero1+numero2+numero3-maximo-minimo)
print(minimo,intermediario,maximo)

-- OUTPUT:
-2 0 10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:15:05) 
-- CODE:
numero1=int(input("Escreva um numeros: "))
numero2=int(input("Escreva um numeros: "))
numero3=int(input("Escreva um numeros: "))
minimo= min(numero1,numero2,numero3)
maximo= max(numero1,numero2,numero3)
intermediario= (numero1+numero2+numero3-maximo-minimo)
print(minimo,intermediario,maximo)

-- EXECUTION TIME:
0.138164
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2 0 10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
